--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -1,2 +1,7 @@
 // Use this file to define style overrides for @edx/paragon
 // This file is included after all Paragon styles, but should generally avoid using private mixins in Paragon.
+
+// header learners dashboard
+header.d-flex.shadow-sm.align-items-center.learner-variant-header.pl-4 {
+    background: #e96828 !important;
+}
